# iBib

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  REQUIREMENTS.md  ROADMAP.md  gt_bibs.txt  pyproject.toml  requirements.txt
configs/: dataset.yaml
data/: README.md  race_bibs_5k.txt
docs/: CAMERA_PLACEMENT.md  CONFIGURATION.md  DESIGN_DECISIONS.md  DEVELOPMENT_GUIDE.md  INTEGRATION_PROTOCOL.md  MODEL_ASSETS.md  OCR_IMPROVEMENT_PLAN.md  PHOTO_TAGGING_PLAN.md  PIPELINE_BREAKDOWN.md  PROTOTYPE_BOM.md  RECOGNITION_SYSTEM.md  TECH_NOTES.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.svelte
frontend/src/lib/: api.js  stores.js
frontend/src/lib/components/: BibInput.svelte  CameraPreview.svelte  CrossingFeed.svelte  Live.svelte  Network.svelte  Review.svelte  Setup.svelte  StatsPanel.svelte
scripts/: check_error_images.py  consolidate_detector_data.py  convert_coco_to_yolo.py  evaluate_ocr_models.py  export_ocr_model.py  export_tensorrt.py  extract_video_frames.py  fetch_model_assets.py  finetune_ocr.py  generate_synthetic_bibs.py  label_ui.py  prepare_ocr_dataset.py  process_tagged_photos.py  process_unlabeled.py  review_ui.py  run_all_batches.sh  run_live.py  test_completeness_filter.py  test_ocr.py  test_ocr_phase1.py  test_ocr_phase1_v2.py  test_video_pipeline.py  train_detector.py  validate_dataset.py  verify_model_assets.py
src/pointcam/: __init__.py  camera.py  crossing.py  dashboard.py  inference.py  pipeline.py  recognition.py
src/pointcam/web/: __init__.py  __main__.py  app.py  frame_buffer.py  manager.py
src/pointcam/web/routers/: network.py  pipeline.py  review.py  setup.py  stream.py
src/pointcam/web/static/: index.html
tests/: __init__.py  test_crossing.py  test_pipeline_integration.py  test_recognition.py
(+2 files in other folders)
